
0.10 (UNRELEASED):

 * Enhancements:
   - Numerous improvements, thanks to Francesco Marella:
     - Figaro xml import script
     - Added option to automatically save changes
     - Added context menu to left pane
     - Added Clone command to clone an entry 

 * Bug fixes:
   - Save menu option and toolbar icon are now inactive when there is
     nothing to save.

0.9 (2011-09-15):

 * Enhancements:

 * Bug fixes:
   - Don't crash if a new entry is added and no entry is currently selected
     when attempting to update the right pane.

0.8 (2011-08-28):

 * Enhancements:
   - add pasaffe-dump-db to dump contents of DB to stdout in a human readable
     format

 * Bug fixes:
   - Only update right pane after editing an entry if it's still the one
     that is currently selected
   - Properly install Mallard help files in Lucid and Maverick

0.7 (2011-08-25):

 * Enhancements:
   - Added a simple script to import an entry from the command line

 * Bug fixes:
   - Correctly set default preferences
   - Prevent the edit entry dialog from opening twice and being confused

0.6 (2011-08-23):

 * Enhancements:
   - Added some maintainer scripts
   - Added po directory and translation file
   - Added french translation

 * Bug fixes:
   - Fixed missing tooltip on Open URL button
   - Fixed missing string translations
   - Fixed compatibility with newer glade

0.5 (20110822):

 * Enhancements:
   - Option to treat either all data or just passwords as secrets
   - Rename options and button labels
   - Added toolbar button and keyboard shortcut to open URL

 * Bug fixes:
   - None

0.4 (20110821):

 * Enhancements:
   - Now has a NEWS file that lists changes
   - Entry list is now uses a case-insensitive sort
   - A confirmation dialog has been added when deleting an entry
   - Now compatible with Ubuntu 10.04

 * Bug fixes:
   - Disabled Launchpad integration since this isn't packaged in Ubuntu.
   - Removed some warnings when using time.time()

0.3 (20110820):
